--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,4 +49,4 @@ body {
 .navbar .navbar-toggler[aria-expanded="true"] {
     border-color: var(--black-color);
 }
-/* End navbat */
+/* End navbar */
