--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,5 +106,10 @@ body {
     opacity: 1;
     transform: translateY(0rem);
 } 
-
+.featured .sale {
+    background-color: var(--beige-color);
+    transform: rotate(-90deg);
+    margin-left: -8px;
+    margin-top: 50px;
+}
 /* End featured */
