--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,4 +115,17 @@ body {
     margin-left: -8px;
     margin-top: 50px;
 }
+.featured .text {
+    margin-top: 150px !important;
+}
+.featured .text::before {
+    content: "";
+    background-color: var(--beige-color);
+    width: 120px;
+    height: 1px;
+    position: absolute;
+}
+.featured .img-thumbnail {
+    background-color: var(--beige-color);
+}
 /* End featured */
