--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ body {
     margin-top: 50px;
 }
 .featured .text {
-    margin-top: 150px !important;
+    margin-top: 100px;
 }
 .featured .text::before {
     content: "";
