--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,4 +149,7 @@ div.card {
 .img-products {
     background-color: var(--card-color);
 }
+.products .icon {
+    color: var(--beige-color);
+}
 /* End products */
