--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,3 +217,15 @@ input::placeholder {
 }
 /* End Subscribe */
 
+/* Start Footer */
+.footer .container::after {
+    content: "";
+    border: 0.1px solid rgba(128, 128, 128, 0.295);
+    width: 70%;
+    height: 1px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin-top: 30px;
+}
+/* End Footer */
