--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,7 +218,7 @@ input::placeholder {
 /* End Subscribe */
 
 /* Start Footer */
-.footer .container::after {
+.footer::after {
     content: "";
     border: 0.1px solid rgba(128, 128, 128, 0.295);
     width: 70%;
